--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,14 @@ server:
 spring:
   jackson:
     property-naming-strategy: SNAKE_CASE
+  cloud:
+    aws:
+      sqs:
+        enabled: true
 
 security:
   jwt-secret: change-it
+
+events:
+  queues:
+    catalog-emit: catalog_emit
