Create queues and configure SqsClient !wip

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     ports:
       - "4566:4566"
     environment:
-      - SERVICES=dynamodb
+      - SERVICES=dynamodb,sqs
     volumes:
       - ./localstack/scripts:/opt/scripts
       - ./localstack:/etc/localstack/init/ready.d
