--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,10 +6,10 @@ server:
 spring:
   jackson:
     property-naming-strategy: SNAKE_CASE
-#  cloud:
-#    aws:
-#      sqs:
-#        enabled: true
+  cloud:
+    aws:
+      sqs:
+        endpoint: http://localhost:4566
 
 security:
   jwt-secret: change-it
