Work in progress: refactoring doTransactionUpdate method

--- a/pom.xml
+++ b/pom.xml
@@ -151,7 +151,8 @@
 							<version>${lombok-mapstruct-binding.version}</version>
 						</path>
 					</annotationProcessorPaths>
-				</configuration>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
 			</plugin>
 		</plugins>
 	</build>
